Version 0.2
* added functions to identify and strip white spaces
* implemented all remaining json_new_* functions
* implemented json_format_string(), a basic formatting function

Version 0.1
* The starting point
